# API/src/routes.js
@@ -5,19 +5,22 @@ const paciente = require('./controllers/paciente.js');
 const enfermeiro = require('./controllers/enfermeiro.js'); 
 const medico = require('./controllers/medico.js');
 const func_med = require('./controllers/func_med.js');
-const mens_med = require('./controllers/mens_med.js');
+const Login = require('./controllers/loginp.js');
+const MiddlewareAuth = require('./middleware/auth.js');
 
 rota.get('/', (req, res) => {
     res.json({ titulo: 'API DD respondendo' });
 });
 
+rota.post('/loginp', Login.login); // Rota para cadastro de paciente
+rota.get('/loginp', Login.validaToken); // Rota para ler todos os pacientes
+
 //Rotas de paciente
 rota.post('/pacientes', paciente.create); // Rota para cadastro de paciente
-rota.post('/pacientes', paciente.login); // Rota para login
-rota.get('/pacientes', paciente.read); // Rota para ler todos os pacientes
-rota.put('/pacientes/:id', paciente.update); // Rota para atualizar paciente
-rota.get('/pacientes/:id', paciente.readOne); // Rota para ler paciente por ID
-rota.delete('/pacientes/:id', paciente.deletar); // Rota para deletar paciente por ID
+rota.get('/pacientes', MiddlewareAuth.validate, paciente.read); // Rota para ler todos os pacientes
+rota.put('/pacientes/:id', MiddlewareAuth.validate, paciente.update); // Rota para atualizar paciente
+rota.get('/pacientes/:id', MiddlewareAuth.validate, paciente.readOne); // Rota para ler paciente por ID
+rota.delete('/pacientes/:id', MiddlewareAuth.validate, paciente.deletar); // Rota para deletar paciente por ID
 
 // Rota de enfermeiro
 rota.post('/enfermeiros', enfermeiro.create); // Rota para cadastro
@@ -39,11 +42,5 @@ rota.delete('/medicos/:id', medico.deletar); // Rota para deletar medico por ID
 rota.post('/funcmed', func_med.create); // Rota para criar atestado
 rota.get('/funcmed', func_med.read); // Rota para ler todos os atestados
 rota.get('/funcmed/paciente/:pacienteId', func_med.readOne);
-
-// Rota de Mensagem de Médico
-rota.post('/mensmed', mens_med.create); // Rota para criar mensagem
-rota.get('/mensmed', mens_med.read); // Rota para ler todos os mensagens
-rota.get('/mensmed/paciente/:pacienteId', mens_med.readOne);
-rota.delete('/mensmed/:id', mens_med.deletar); // Rota para deletar mensagem por ID
 
 module.exports = rota;
