# API/swagger.json
@@ -5,7 +5,7 @@
         "version": "1.0.0",
         "description": "Documentação da API do TCC-DS Diagnóstico Digital",
         "contact": {
-            "name": "Pedro Duarte, Mellyssa Silveira, Lizzie Sousa e Rodrigo Passberg",
+            "name": "Pedro Duarte",
             "email": "pedrodnrusso@gmail.com",
             "url": "https://github.com/PedroDNRusso"
         }
@@ -16,10 +16,35 @@
             "description": "Servidor local"
         }
     ],
+        "securityDefinitions": {
+        "bearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header",
+            "description": "Bearer token para autenticação",
+            "scheme": "bearer",
+            "bearer format": "JWT",
+            "bearer token": "JWT <token>",
+            "bearer token description": "Bearer token para autenticação"
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearer format": "JWT"
+            }
+        }
+    },
     "tags": [
         {
             "name": "Teste geral da API",
             "description": "Endpoint de teste da API"
+        },
+        {
+            "name": "Login de Paciente",
+            "description": "Endpoint de login de paciente"
         },
         {
             "name": "CRUD de Pacientes",
@@ -30,8 +55,12 @@
             "description": "Endpoints de medicos"
         },
         {
-            "name": "CRUD de Enferemeiros",
+            "name": "CRUD de Enfermeiros",
             "description": "Endpoints de enfermeiros"
+        },
+        {
+            "name": "Função de Atestados",
+            "description": "Endpoints de atestados"
         }
     ],
     "paths": {
@@ -51,10 +80,74 @@
                 }
             }
         },
+         "/loginp": {
+            "get": {
+                "tags": [
+                    "Rotas de Login"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "summary": "Endpoint para validar o login",
+                "responses": {
+                    "200": {
+                        "description": "Login realizado com sucesso"
+                    },
+                    "401": {
+                        "description": "Token inválido ou expirado"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Rotas de Login"
+                ],
+                "summary": "Endpoint para fazer o login",
+                "requestBody": {
+                    "description": "Dados de login",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "default": "bai.vit@email.com"
+                                    },
+                                    "senha": {
+                                        "type": "string",
+                                        "default": "senha123"
+                                    },
+                                    "validade": {
+                                        "type": "integer",
+                                        "default": 30
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Login realizado com sucesso"
+                    },
+                    "400": {
+                        "description": "Erro ao fazer login, verifique e-mail e senha"
+                    }
+                }
+            }
+        },
         "/pacientes": {
             "get": {
                 "tags": [
                     "CRUD de Pacientes"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
                 ],
                 "summary": "Endpoint para obter todos os pacientes",
                 "responses": {
@@ -126,6 +219,11 @@
                 "tags": [
                     "CRUD de Pacientes"
                 ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "parameters": [
                     {
                         "name": "id",
@@ -194,6 +292,11 @@
             "delete": {
                 "tags": [
                     "CRUD de Pacientes"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
                 ],
                 "parameters": [
                     {
@@ -390,6 +493,180 @@
                     }
                 }
             }
+        },
+        "/enfermeiros": {
+            "get": {
+                "tags": [
+                    "CRUD de Enfermeiros"
+                ],
+                "summary": "Endpoint para obter todos os enfermeiros",
+                "responses": {
+                    "200": {
+                        "description": "Lista de enfermeiros cadastrados"
+                    },
+                    "500": {
+                        "description": "Servidor não está respondendo"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "CRUD de Enfermeiros"
+                ],
+                "summary": "Endpoint para cadastrar novo enfermeiro",
+                "requestBody": {
+                    "description": "Dados de acesso",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "nome": {
+                                        "type": "string",
+                                        "default": "Denise Costa"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "default": "denispenis@gmail.com"
+                                    },
+                                    "senha": {
+                                        "type": "string",
+                                        "default": "senha123"
+                                    },
+                                    "ecip": {
+                                        "type": "string",
+                                        "default": "123456"
+                                    },
+                                    "data_nascimento": {
+                                        "type": "datetime",
+                                        "default": "1967-09-07T08:00:00.000Z"
+                                    },
+                                    "area": {
+                                        "type": "string",
+                                        "default": "Cardiologia"
+                                    },
+                                    "telefone": {
+                                        "type": "string",
+                                        "default": "19971348290"
+                                    },
+                                    "endereco": {
+                                        "type": "string",
+                                        "default": "Rua das Flores, 123, Bairro Jardim, Cidade Exemplo"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Novo enfermeiro cadastrado"
+                    },
+                    "400": {
+                        "description": "Erro ao cadastrar enfermeiro, envie nome, email, senha, crm, especialidade e endereco"
+                    }
+                }
+            }
+        },
+        "/enfermeiros/{id}": {
+            "put": {
+                "tags": [
+                    "CRUD de Enfermeiros"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "Id do enfermeiro a ser alterado",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "summary": "Endpoint para alterar dados do enfemreiro",
+                "requestBody": {
+                    "description": "Dados de exemplo",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "id": {
+                                        "type": "integer",
+                                        "default": 1
+                                    },
+                                    "nome": {
+                                        "type": "string",
+                                        "default": "Denise Costa"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "default": "denispenis@gmail.com"
+                                    },
+                                    "senha": {
+                                        "type": "string",
+                                        "default": "senha123"
+                                    },
+                                    "ecip": {
+                                        "type": "string",
+                                        "default": "123456"
+                                    },
+                                    "data_nascimento": {
+                                        "type": "datetime",
+                                        "default": "1967-09-07T08:00:00.000Z"
+                                    },
+                                    "area": {
+                                        "type": "string",
+                                        "default": "Cardiologia"
+                                    },
+                                    "telefone": {
+                                        "type": "string",
+                                        "default": "19971348290"
+                                    },
+                                    "endereco": {
+                                        "type": "string",
+                                        "default": "Rua das Flores, 123, Bairro Jardim, Cidade Exemplo"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "202": {
+                        "description": "Enfermeiro alterado com sucesso"
+                    },
+                    "400": {
+                        "description": "Erro ao cadastrar enfermeiro, envie nome, email, senha, crm, especialidade e endereco"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "CRUD de Enfermeiros"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "Id do enfermeiro a ser excluido",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "summary": "Endpoint para excluir um enfemreiro",
+                "responses": {
+                    "204": {
+                        "description": "Enfermeiro alterado com sucesso"
+                    },
+                    "500": {
+                        "description": "Não foi possível excluir enfemreiro"
+                    }
+                }
+            }
         }
-    }
+    }  
 }
